# echo-server

./: Cargo.toml
src/: error.rs  main.rs
src/api/: auth.rs  device.rs  mod.rs  storage.rs  transcription.rs  user.rs
src/connector/: backblaze.rs  mistral.rs  mod.rs  modal.rs  reverb.rs
src/model/: device.rs  mod.rs  token.rs  transcription.rs  user.rs
src/repo/: surreal.rs
