[package]
name = "orchestra-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.2"
actix-web-grants = "3.0.1"
actix-cors = "0.7.1"
async-trait = "0.1"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.8"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
thiserror = "2.0.12"
serde_json = "1.0.93"
serde = { version = "^1", features = ["derive"] }
surrealdb = { version = "2.3.7", features = ["protocol-ws", "native-tls"] }
surrealitos = { git = "https://github.com/litsdm/surrealitos.git" }
